[package]
name = "mcmgr"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]

[dependencies]
broadcast = "0.1.0"
chrono = "0.4.0"
clap = "2.26.2"
flate2 = "0.2.20"
pbr = "1.0.0"
reqwest = "0.7.3"
serde = "*"
serde_derive = "1.0.15"
tar = "0.4.13"
time = "0.1.38"
toml = "0.4.5"
xz2 = "0.1.3"
zstd = "0.4.14"
